[package]
name = "server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
axum = "0.7"
aerospike = "1.0.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2.8"
axum-extra = { version = "0.9", features = ["cookie"] }  
time = "0.3"       
tower-cookies = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
jsonwebtoken = "9.2"
uuid = { version = "1.7", features = ["v4"] }
aws-sdk-s3 = "0.26.0"
warp = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }


